# volk-sha256

./: CMakeLists.txt  README.md  volk_sha256.pc.in
apps/: CMakeLists.txt  volk_sha256-config-info.cc  volk_sha256_profile.cc  volk_sha256_profile.h
cmake/Modules/: VolkConfig.cmake
docs/: extending_volk_sha256.dox  kernels.dox  terms_and_techniques.dox  using_volk_sha256.dox
include/volk_sha256/: constants.h  volk_sha256_common.h  volk_sha256_complex.h  volk_sha256_malloc.h  volk_sha256_prefs.h
kernels/: README.txt
kernels/volk_sha256/: .volk_sha256_8u_hash_32u.h.swp  volk_sha256_32f_null_32f.h  volk_sha256_8u_hash_32u.h
kernels/volk_sha256/asm/orc/: volk_sha256_16sc_magnitude_32f_aligned16_orc_impl.orc
lib/: .qa_volk_sha256_8u_hash_32u.cc.swp  CMakeLists.txt  constants.c.in  kernel_tests.h  qa_utils.cc  qa_utils.h  qa_volk_sha256_8u_hash_32u.cc  testqa.cc  volk_sha256_malloc.c  volk_sha256_prefs.c  volk_sha256_rank_archs.c  volk_sha256_rank_archs.h
python/volk_sha256_modtool/: CMakeLists.txt  README  __init__.py  cfg.py  volk_sha256_modtool  volk_sha256_modtool_generate.py
tmpl/: volk_sha256.tmpl.c  volk_sha256.tmpl.h  volk_sha256_cpu.tmpl.c  volk_sha256_cpu.tmpl.h  volk_sha256_machine_xxx.tmpl.c  volk_sha256_machines.tmpl.c  volk_sha256_machines.tmpl.h  volk_sha256_typedefs.tmpl.h
